# PyrogramMod

./: .gitignore  .readthedocs.yaml  Makefile  README.md  dev-requirements.txt  hatch_build.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql-analysis.yml  publish.yaml  publish_pypi.yaml  python.yml  scrape-errors.yml
compiler/api/: compiler.py  docs.json
compiler/api/source/: main_api.tl
compiler/api/template/: combinator.txt  type.txt
compiler/docs/: compiler.py
compiler/docs/template/: bound-methods.rst  methods.rst  types.rst
compiler/errors/: sort.py
compiler/errors/source/: 303_SEE_OTHER.tsv  400_BAD_REQUEST.tsv  401_UNAUTHORIZED.tsv  403_FORBIDDEN.tsv  406_NOT_ACCEPTABLE.tsv  420_FLOOD.tsv  500_INTERNAL_SERVER_ERROR.tsv
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst  support.rst
docs/source/api/: decorators.rst  handlers.rst
docs/source/faq/: peer-id-invalid-error.rst  the-account-has-been-limited-deactivated.rst
docs/source/intro/: install.rst  quickstart.rst
docs/source/releases/: index.rst  v2.0.107.rst  v2.0.108.rst  v2.1.0.rst  v2.1.1.rst  v2.1.18.rst  v2.1.2.rst  v2.1.21.rst  v2.1.23.rst  v2.1.24.rst  v2.1.25.rst  v2.1.26.rst  v2.1.27.rst  v2.1.28.rst  v2.1.29.rst  v2.1.3.rst  v2.1.30.rst  v2.1.4.rst  v2.1.5.rst  v2.1.6.rst  v2.2.0.rst  v2.2.1.rst  v2.2.2.rst  v2.2.3.rst  v2.2.4.rst  v2.3.0.rst  v2.3.1.rst  v2.4.0.rst  v2.4.1.rst
docs/source/start/: auth.rst  errors.rst  invoking.rst  updates.rst
docs/source/topics/: advanced-usage.rst  boosts-and-giveaways.rst  business-features.rst  client-settings.rst  conference-calls.rst  create-filters.rst  debugging.rst  keyboard-styles.rst  miscellaneous.rst  monoforum.rst  more-on-updates.rst  mtproto-vs-botapi.rst  privacy-settings.rst  proxy.rst  saved-messages.rst  scheduling.rst  serializing.rst  smart-plugins.rst  speedups.rst  star-gifts.rst  storage-engines.rst  stories.rst  suggested-posts.rst  synchronous.rst  telegram-stars.rst  test-servers.rst  text-formatting.rst  todo-lists.rst  use-filters.rst
pyrogram/: __init__.py  client.py  dispatcher.py  filters.py  sync.py  utils.py
pyrogram/connection/: connection.py
pyrogram/crypto/: aes.py
pyrogram/enums/: __init__.py  boost_type.py  business_away_message_schedule.py  chat_action.py  chat_members_filter.py  message_entity_type.py  message_media_type.py  message_service_type.py  privacy_key_type.py  rich_block_type.py  rich_text_type.py  story_privacy_type.py
pyrogram/handlers/: __init__.py  business_connection_handler.py  chat_boost_handler.py  guard_bot_query_handler.py  story_handler.py
pyrogram/methods/: __init__.py
pyrogram/methods/advanced/: invoke.py  resolve_peer.py  save_file.py
pyrogram/methods/auth/: connect.py  initialize.py
pyrogram/methods/boosts/: __init__.py  apply_boost.py  get_boost_level_options.py  get_boost_status.py  get_boosts_list.py  get_my_boosts.py
pyrogram/methods/bots/: __init__.py  answer_callback_query.py  answer_chat_join_request_query.py  answer_guard_bot_query.py  confirm_bot_connection.py  edit_bot_access_settings.py  get_bot_access_settings.py  send_chat_join_request_web_app.py  send_game.py  send_inline_bot_result.py  send_streaming_text.py
pyrogram/methods/business/: __init__.py  check_quick_reply_shortcut.py  create_business_chat_link.py  delete_business_chat_link.py  delete_quick_reply_messages.py  delete_quick_reply_shortcut.py  edit_business_chat_link.py  edit_quick_reply_shortcut.py  get_bot_business_connection.py  get_business_chat_links.py  get_quick_replies.py  get_quick_reply_messages.py  send_quick_reply_messages.py
pyrogram/methods/chats/: __init__.py  create_forum_topic.py  create_group_call.py  delete_forum_topic.py  edit_forum_topic.py  get_chat.py  get_forum_topics.py  get_forum_topics_by_id.py  get_group_call_stream_channels.py  get_group_call_stream_rtmp_url.py  get_similar_channels.py  join_chat.py  kick_chat_member.py  promote_chat_member.py  send_reaction.py  set_chat_guard_bot.py  set_chat_permissions.py  set_chat_reactions.py  toggle_direct_messages.py
pyrogram/methods/communities/: __init__.py  add_chat_to_community.py  approve_all_community_peer_links.py  approve_community_peer_link.py  ban_community_participant.py  create_community.py  get_community_participant_chats.py  get_community_peer_link_requests.py  get_joined_communities.py  toggle_community_collapsed.py  toggle_community_peer_link.py
pyrogram/methods/decorators/: __init__.py  on_business_connection.py  on_chat_boost.py  on_guard_bot_query.py
pyrogram/methods/ephemeral/: __init__.py  (+8 more)
pyrogram/parser/: html.py  markdown.py
pyrogram/session/: auth.py  session.py
pyrogram/storage/: file_storage.py  sqlite_storage.py  storage.py
pyrogram/types/: __init__.py  object.py
tests/filters/: test_command.py
(+206 files in other folders)
