[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrogrammod"
description = "Modified version of the Pyrogram Telegram MTProto API framework in Python for users and bots."
readme = "README.md"
authors = [
    { name = "Dan (original author)" },
    { name = "PyrogramMod (Fork Maintainer)" }
]
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
dependencies = [
    "pyaes==1.6.1",
    "pysocks==1.7.1",
    "aiofiles"
]
dynamic = ["version"]
keywords = ["telegram", "chat", "messenger", "mtproto", "api", "client", "library", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[project.urls]
Homepage = "https://github.com/PyrogramMod/PyrogramMod"
Tracker = "https://github.com/PyrogramMod/PyrogramMod/issues"
Community = "https://t.me/pyrogramodchat"
Source = "https://github.com/PyrogramMod/PyrogramMod"
Documentation = "https://pyrogrammod.readthedocs.io"

[tool.setuptools.packages.find]
exclude = ["compiler*", "tests*"]

[tool.setuptools.package-data]
pyrogram = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "pyrogram.__version__"}
